# oncn-bwm

./: 0001-adapt-libbpf-0.8.1.patch  0002-clean-code-and-use-securec-function.patch  0003-add-proc-file-interface.patch  0004-fix-offline-packets-block.patch  CMakeLists.txt  DESIGN.md  README.en.md  README.md  README_EN.md  bwmcli.c  bwmcli.h  oncn-bwm.spec  oncn-bwm.yaml
bpf/: CMakeLists.txt  bwm_prio_kern.c  bwm_tc.c  bwm_tc.h  bwm_tc_common.h  bwm_tc_i.c
multi_prio_bwm/: Makefile  go.mod  go.sum
multi_prio_bwm/api/v1/: daemon_rpc.pb.go  daemon_rpc.proto  daemon_rpc_grpc.pb.go
multi_prio_bwm/cmd/alg-daemon/: main.go
multi_prio_bwm/cmd/cmdctl/: main.go
multi_prio_bwm/cmd/cni-plugin/: cni-install.sh  main.go
multi_prio_bwm/cmd/daemon/: main.go
multi_prio_bwm/example/: example.conflist  pod.yaml
multi_prio_bwm/example/kernelko/: cls_dhcmatchall.c  dhcifb.c
multi_prio_bwm/install/kubernetes/: oncn-bwm.yaml
multi_prio_bwm/pkg/bpfgo/: dhc_custom.go  gen.go  tc_bpf.go  tcedt_bpfeb.go  tcedt_bpfel.go  utils.go
multi_prio_bwm/pkg/nets/: nets.go
multi_prio_bwm/pkg/rpc/: cnirpc.go
multi_prio_bwm/test/: process_test.sh
oci-hook/: hookpost.sh  hookspec.json  hooktest.sh  libhook.sh  oci-hook.md
oci-hook/sample/: iperf-client-2.yaml  iperf-client-3.yaml  iperf-client.yaml  iperf-server-2.yaml  iperf-server-3.yaml  iperf-server.yaml  演示.md
oci-hook/sample-light/: iperf-client-2.yaml  iperf-client-3.yaml  iperf-client.yaml  iperf-server-2.yaml  iperf-server-3.yaml  iperf-server.yaml  演示.md
tools/: README.md  bwm_monitor.bt  bwm_monitor_ingress.bt
(+56 files in other folders)
